# ai-resume-agent

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  main.py  pyproject.toml  run_ui.sh
docs/: ARCHITECTURE.md  DEV_SETUP.md  DOCSTRING_GUIDE.md  EXECUTION_FLOW.md  STREAMLIT.md  TESTING.md  TROUBLESHOOTING.md  WORKFLOW.drawio
examples/: job_description.txt.example  my_resume.txt.example
src/: __init__.py  cli.py  config.py  llm_client.py  models.py  prompts.py  resume_agent.py  storage.py  streamlit_app.py
tests/: conftest.py  test_llm_client.py  test_resume_agent.py  test_storage.py
