[project]
name = "ai-resume-agent"
version = "0.1.0"
description = "AI-powered agent to tailor resumes based on job descriptions using local LLMs via Ollama"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "streamlit>=1.28.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
pythonpath = ["."]
